# tgBot_bnt

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  loader.py  main.py  pyproject.toml  requirements.txt  tasks.txt  test.db
alembic/: env.py
app/: main.py
app/database/: config.py
app/dependencies/: repositories.py  services.py
app/dtos/: manager_dto.py  report_dto.py
app/exceptions/: base.py  (+2 more)
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routers/: managers.py  reports.py
backend/app/core/: config.py
backend/app/dependencies/: __init__.py  services.py
backend/app/exceptions/: repository.py
backend/app/models/: report_models.py
backend/app/repositories/: manager_repository.py  report_repository.py
backend/app/schemas/: reponse_schemas.py  report_schemas.py
backend/app/services/: permission_service.py  reports_service.py
bot/: loader.py  main.py
database/: excel.py  sqlite.py
dockerfiles/: Dockerfile.backend  Dockerfile.bot
entities/: managers.py
folder_to_reports/: excel.xlsx
reports/: report.py
telegram_bot/: .env.example  pyproject.toml
telegram_bot/bot/core/: config.py
telegram_bot/bot/database/: excel.py
telegram_bot/bot/entities/: report.py
telegram_bot/bot/enums/: __init__.py
telegram_bot/bot/handlers/: excel_handler.py
telegram_bot/bot/keyboards/: reply.py
telegram_bot/bot/services/: __init__.py
telegram_bot/bot/states/: states_form.py
telegram_bot/bot/utils/: commands.py  logger.py
(+60 files in other folders)
